Changed content and added footer module

--- a/src/App/Views/home.twig
+++ b/src/App/Views/home.twig
@@ -2,9 +2,9 @@
 
 {% block body %}
             <div class="ui text container">
-                <h1 class="ui inverted header"> Bienvenue sur Dramaax </h1>
+                <h1 class="ui inverted header"> Bienvenue sur Cana </h1>
                 <h2>Serveur roleplay pour Grand Theft Auto V</h2> <br>
-                <div class="ui huge green button">Nous rejoindre <i class="right arrow icon"></i></div>
+                <div class="ui huge green button">Rejoindre notre communauté</div>
             </div>
         </div>
 
@@ -12,50 +12,17 @@
             <div class="ui middle aligned stackable grid container">
                 <div class="row">
                     <div class="eight wide column">
-                        <h3 class="ui header">L'expérience Dramaax désormais sur GTA</h3>
-                        <p>Dramaax est une communauté roleplay qui s'est forgée une solide réputation depuis ses dernières années. Jouez parmis une communauté soudée et fidèle au roleplay.</p>
+                        <h3 class="ui header">L'expérience Cana désormais sur GTA</h3>
+                        <p>Cana est une communauté roleplay qui s'est forgée une solide réputation depuis ses dernières années. Jouez parmis une communauté soudée et fidèle au roleplay.</p>
 
                         <h3 class="ui header">Whitelist ouverte</h3>
                         <p>Afin de profiter d'une meilleure expérience, notre serveur dispose d'une whitelist, qui est actuellement ouverte aux inscriptions.</p>
 
                         <h3 class="ui header">Serveur en développement</h3>
-                        <p>Le serveur est actuellement en cours de développement, merci de votre compréhension.</p>
+                        <p>Le serveur est actuellement en cours de développement, nous y intégrons de nouvelles extensions. Merci de votre compréhension.</p>
                     </div>
                     <div class="six wide right floated column">
                         <img src="https://s-media-cache-ak0.pinimg.com/originals/ff/09/9e/ff099e42b1bc472a9dd531b228bbd903.jpg" class="ui large bordered rounded image">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="ui inverted vertical footer segment">
-            <div class="ui container">
-                <div class="ui stackable inverted divided equal height stackable grid">
-                    <div class="three wide column">
-                        <h4 class="ui inverted header">A propos</h4>
-                        <div class="ui inverted link list">
-                            <a href="#" class="item">Nous contacter</a>
-                            <a href="#" class="item">Boutique</a>
-                            <a href="#" class="item">Règles</a>
-                            <a href="#" class="item">FAQ</a>
-                        </div>
-                    </div>
-                    <div class="three wide column">
-                        <h4 class="ui inverted header">Communautaire</h4>
-                        <div class="ui inverted link list">
-                            <a href="#" class="item">Forum</a>
-                            <a href="#" class="item">Donation</a>
-                            <a href="#" class="item">Teamspeak</a>
-                            <a href="#" class="item">Steam</a>
-                        </div>
-                    </div>
-                    <div class="seven wide column">
-                        <h4 class="ui inverted header">Dramaax, une communauté soudée par RP</h4>
-                        <p>
-                            Découvrez Los Santos, une ville où tous les rêves sont possibles. <br>
-                            Venez participer à une société dans laquelle votre histoire et vos actions peuvent changer cette ville.
-                        </p>
                     </div>
                 </div>
             </div>
