--- a/src/App/Views/layout.twig
+++ b/src/App/Views/layout.twig
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}DRAMAAX - GTA RP{% endblock %}</title>
+    <title>{% block title %}Cana | Serveur RP{% endblock %}</title>
 
     {% block stylesheets %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
