--- a/src/App/Views/_Shared/layout.twig
+++ b/src/App/Views/_Shared/layout.twig
@@ -15,17 +15,17 @@
 </head>
 <body>
 {%  block navbar %}
-    {% include 'navbar.twig' %}
+    {% include '_Shared/navbar.twig' %}
 {% endblock %}
 
 {% block flash %}
-    {% include 'flash.twig' %}
+    {% include '_Shared/flash.twig' %}
 {% endblock %}
 
 {% block body %}{% endblock %}
 
 {% block footer %}
-    {% include 'footer.twig' %}
+    {% include '_Shared/footer.twig' %}
 {% endblock %}
 
 {% block javascript %}
