--- a/src/App/Views/_Shared/navbar.twig
+++ b/src/App/Views/_Shared/navbar.twig
@@ -59,8 +59,8 @@
                 <a class="item">Règles</a>
                 <a class="item">Forum</a>
                 <div class="right item">
-                    <a class="ui inverted button">Connexion</a>
-                    <a class="ui orange inverted button">Inscription</a>
+                    <a href='{{ path('authentication') }}' class="ui inverted button">Connexion</a>
+                    <a href='{{ path('authentication') }}' class="ui orange inverted button">Inscription</a>
                 </div>
             </div>
         </div>
