--- a/src/App/Views/_Shared/navbar.twig
+++ b/src/App/Views/_Shared/navbar.twig
@@ -1,5 +1,5 @@
 <!--<nav class="ui borderless inverted top fixed menu">
-    <a href="{{ path('home') }}" class="header item">DRAMAAX - Serveur GTA RP</a>
+    <a href="" class="header item">Serveur GTA RP</a>
     <div class="right menu">
         {# if auth.check() %}
             <div class="header item">{{ auth.user.username }}</div>
@@ -8,17 +8,15 @@
             </div>
         {% else #}
         <div class="item">
-            <a href="{{ path('login') }}" class="ui circular button">Login</a>
+            <a href="" class="ui circular button">Login</a>
         </div>
         <div class="item">
-            <a href="{{ path('home') }}" class="ui teal circular button">Register</a>
+            <a href="" class="ui teal circular button">Register</a>
         </div>
         {# endif #}
     </div>
 </nav>-->
 
-
-<!-- Following Menu -->
 <div class="ui large top fixed hidden menu">
     <div class="ui container">
         <a class="active item">Home</a>
