--- a/src/App/Views/authentication.twig
+++ b/src/App/Views/authentication.twig
@@ -1,74 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Standard Meta -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-    <!-- Site Properties -->
-    <title>Login Example - Semantic</title>
+    <title>Cana | Espace d'authentification</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
     <link rel="stylesheet" href="{{ asset('css/app.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/auth.css') }}">
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
-
-    <style type="text/css">
-        body {
-            background-color: #DADADA;
-        }
-        body > .grid {
-            height: 100%;
-        }
-        .image {
-            margin-top: -100px;
-        }
-        .column {
-            max-width: 450px;
-        }
-    </style>
-    <script>
-      $(document).ready(function() {
-          $('.ui.form').form({
-              fields: {
-                email: {
-                  identifier  : 'email',
-                  rules: [
-                    {
-                      type   : 'empty',
-                      prompt : 'Merci d\'entrer une adresse email'
-                    },
-                    {
-                      type   : 'email',
-                      prompt : 'Merci d\'entrer une adresse email valide'
-                    }
-                  ]
-                },
-                password: {
-                  identifier  : 'password',
-                  rules: [
-                    {
-                      type   : 'empty',
-                      prompt : 'Merci d\'entrer un mot de passe'
-                    },
-                    {
-                      type   : 'length[6]',
-                      prompt : 'Merci d\'entrer un mot de passe ayant au moins 6 caractères'
-                    }
-                  ]
-                }
-              }
-            })
-          ;
-        })
-      ;
-    </script>
 </head>
 <body>
-<a href="{{ path('home') }}">
-    <i style='position:absolute; top:5%; left:2%; font-size: 3em;'class="left inverted arrow icon"></i>
-</a>
 
+<a href="{{ path('home') }}">
+    <i style='position:absolute; top:5%; left:2%; font-size: 3em;' class="inverted left arrow icon"></i>
+</a>
 
 <div class="ui middle aligned cover-img center aligned grid" style="background-image:url('{{ asset('img/authentication_background.jpg')}}')">
     <div class="column">
@@ -81,13 +28,13 @@
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="user icon"></i>
-                        <input type="text" name="email" placeholder="Adresse email">
+                        <input required type="text" name="email" placeholder="Adresse email">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        <input type="password" name="password" placeholder="Mot de passe">
+                        <input required type="password" name="password" placeholder="Mot de passe">
                     </div>
                 </div>
                 <div class="ui fluid large green submit right labeled icon button">
@@ -99,11 +46,34 @@
         </form>
 
         <div class="ui message">
-            <a href="#">Je veux rejoindre la communauté Cana !</a>
+            <a href="{{ path('signup') }}">Je veux rejoindre la communauté Cana !</a>
         </div>
     </div>
 </div>
-<script src="{{ asset('https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js') }}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
+
+<script>
+  $().ready(function() {
+    $('.ui.form').form({
+      fields: {
+        email: {
+          identifier  : 'email',
+          rules: [
+            { type   : 'empty', prompt : 'Merci d\'entrer une adresse email'},
+            { type   : 'email', prompt : 'Merci d\'entrer une adresse email valide' }
+          ]
+        },
+        password: {
+          identifier : 'password',
+          rules: [
+            { type   : 'empty', prompt : 'Merci d\'entrer un mot de passe'},
+            { type   : 'length[6]', prompt : 'Merci d\'entrer un mot de passe ayant au moins 6 caractères'}
+          ]
+        }
+      }
+    })
+  })
+</script>
 </body>
 
 </html>
