Added flash messages

--- a/src/App/Views/_Shared/flash.twig
+++ b/src/App/Views/_Shared/flash.twig
@@ -19,3 +19,7 @@
         {% endfor %}
     </div>
 {% endif %}
+
+<script>
+  $('.message .close').on('click', function() { $(this).closest('.message').transition('fade')})
+</script>
