--- a/src/App/Views/home.twig
+++ b/src/App/Views/home.twig
@@ -31,10 +31,7 @@
 
     <script>
       $(document).ready(function() {
-        $('.masthead').visibility({
-          once: false,
-        })
-
+        $('.masthead').visibility({once: false})
         $('.ui.sidebar').sidebar('attach events', '.toc.item')
       })
     </script>
