--- a/src/App/Views/signup.twig
+++ b/src/App/Views/signup.twig
@@ -19,6 +19,7 @@
 
 <div class="ui middle aligned cover-img center aligned grid" style="background-image:url('{{ asset('img/authentication_background.jpg')}}')">
     <div class="column">
+        {{ include('_Shared/flash.twig') }}
         <h2 class="ui inverted image header">
             <img src="{{ asset('img/authentication_logo.png')}}" class="image"/>
             <div class="content">INSCRIPTION</div>
