--- a/src/App/Views/home.twig
+++ b/src/App/Views/home.twig
@@ -1,4 +1,4 @@
-{% extends '_Shared/layout.twig' %}
+{% extends '_Shared/layout-home.twig' %}
 
 {% block body %}
             <div class="ui text container">
