--- a/src/App/Views/_Shared/navbar.twig
+++ b/src/App/Views/_Shared/navbar.twig
@@ -6,6 +6,6 @@
         </a>
         <a href="{{ path('home') }}" class="item">Accueil</a>
         <a href="#" class="item">Boutique</a>
-        <a href="#" class="item">Forum</a>
+        <a href="http://forum.cana-rp.fr" class="item">Forum</a>
     </div>
 </div>
