--- a/src/App/Views/dashboard.twig
+++ b/src/App/Views/dashboard.twig
@@ -4,10 +4,11 @@
     <div class="ui inverted vertical medium-banner center aligned segment"
     style="background-image:url('img/dashboard_background.jpg');">
         <img src="{{ asset('img/example.png') }}" class="ui medium circular image player-photo" alt="photo">
+
         <div class="ui container">
-            <h1 class="player-details">RASNOV PATRIOTE</h1>
+            <h1 class="player-details">{{ getUsername() }}</h1>
             <p class="player-details">
-                Ambulancier de 42 ans à <i>Los Santos</i>
+                Citoyen de 22 ans à <i>Los Santos</i>
             </p>
         </div>
 
@@ -18,10 +19,7 @@
                  <br>
                  <i>
                      <h1>Biographie</h1>
-                     Jean Bernard naît dans une famille d’ingénieurs. Son grand-père maternel, Émile Paraf, était polytechnicien ; son père, Paul Bernard (1876-1951) était Centralien, ainsi que Michel, son frère cadet. Pendant la Première Guerre mondiale, et tandis que son père est au front, il est envoyé en Bretagne. Jusqu’en 1918, il étudie à l’école communale de Couëron en Loire-Atlantique. Puis Jean Bernard fréquente le lycée Louis-le-Grand à Paris, où il acquiert une solide culture classique. Il lit beaucoup et commence à écrire. À 17 ans, il joue une pièce de Victor Hugo, Mangeront-ils ?. Ses partenaires sont Claude Lévi-Strauss et Pierre Dreyfus. À cette époque, il hésite encore entre la médecine et la littérature. Il finit par se décider pour la médecine : « La médecine me parut allier l’humanisme et mon goût pour les sciences. » (in C’est de l’homme qu’il s’agit, Odile Jacob, 1988).
-
-                     Il suit des cours à la Faculté des sciences de Paris, à la Faculté de médecine et enfin à l’Institut Pasteur.
-                 </i>
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</i>
 
              </div>
              <div class="seven wide column ">
@@ -45,6 +43,10 @@
             <hr>
             <br>
             <h1 class="ui center aligned grid">Casier judiciciaire</h1>
+            <div class="ui center aligned grid casier-judiciare">
+                <h2 style="color:#4c8021;">Votre casier judiciare est vierge.</h2>
+            </div>
+
             <br>
             <br>
             <br>
