--- a/src/App/Views/home.twig
+++ b/src/App/Views/home.twig
@@ -4,7 +4,9 @@
             <div class="ui text container">
                 <h1 class="ui inverted header"> Bienvenue sur Cana </h1>
                 <h2>Serveur roleplay pour Grand Theft Auto V</h2> <br>
-                <div class="ui huge green button">Rejoindre notre communauté</div>
+                <a target='_blank' href="https://discord.gg/QYCVPpR">
+                    <div class="ui huge green button">Rejoindre notre communauté</div>
+                </a>
             </div>
         </div>
 
