--- a/src/App/Views/_Shared/footer.twig
+++ b/src/App/Views/_Shared/footer.twig
@@ -5,7 +5,7 @@
             <div class="three wide column">
                 <h4 class="ui inverted header">A propos</h4>
                 <div class="ui inverted link list">
-                    <a href="#" class="item">Nous contacter</a>
+                    <a href="mailto:contact@cana-rp.fr" class="item">Nous contacter</a>
                     <a href="#" class="item">Boutique</a>
                     <a href="#" class="item">Règles</a>
                     <a href="#" class="item">FAQ</a>
@@ -14,10 +14,10 @@
             <div class="three wide column">
                 <h4 class="ui inverted header">Communautaire</h4>
                 <div class="ui inverted link list">
-                    <a href="#" class="item">Forum</a>
+                    <a href="http://forum.cana-rp.fr" class="item">Forum</a>
                     <a href="#" class="item">Donation</a>
-                    <a href="#" class="item">Discord</a>
-                    <a href="#" class="item">Steam</a>
+                    <a target='_blank' href="https://discord.gg/QYCVPpR" class="item">Discord</a>
+                    <a href="http://twitter.com/cana_rp" class="item">Twitter</a>
                 </div>
             </div>
             <div class="seven wide column">
