--- a/src/App/Views/_Shared/navbar.twig
+++ b/src/App/Views/_Shared/navbar.twig
@@ -1,6 +1,6 @@
 <div class="ui fixed inverted menu">
     <div class="ui container">
-        <a href="#" class="header item">
+        <a href="{{ path('user-profile') }}" class="header item">
             <img class="logo" src="{{ asset('img/authentication_logo.png') }}">
             myPanel <sup>&nbsp; v0.1</sup>
         </a>
